# periferico

./: CHANGELOG.md  LICENSE  PerifericoHelper.cabal  README.md
app/: Main.hs
poc/: Main.hs
src/: AppState.hs  Domain.hs  Exporter.hs  Importer.hs  Order.hs  PerifericoHelper.hs  UI.hs
