cabal-version:       2.4
name:                PerifericoHelper
version:             0.0.0.0
synopsis:            Small util for Periferico
description:         Small util for Periferico
homepage:            https://github.com/imgulyas/PerifericoHelper
bug-reports:         https://github.com/imgulyas/PerifericoHelper/issues
license:             MIT
license-file:        LICENSE
author:              Imre Gulyas
maintainer:          Imre Gulyas <imgulyas@gmail.com>
copyright:           2021 Imre Gulyas
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/imgulyas/PerifericoHelper.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     PerifericoHelper

executable PerifericoHelper
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       PerifericoHelper
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite PerifericoHelper-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       PerifericoHelper
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
