cabal-version:   2.4
name:            PerifericoHelper
version:         0.0.0.0
license:         MIT
license-file:    LICENSE
copyright:       2021 Imre Gulyas
maintainer:      Imre Gulyas <imgulyas@gmail.com>
author:          Imre Gulyas
tested-with:     ghc ==8.8.3
homepage:        https://github.com/imgulyas/PerifericoHelper
bug-reports:     https://github.com/imgulyas/PerifericoHelper/issues
synopsis:        Small util for Periferico
description:     Small util for Periferico
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/imgulyas/PerifericoHelper.git

library
    exposed-modules:  PerifericoHelper,
                      Order,
                      Importer,
                      Exporter
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:  DerivingStrategies
                         , OverloadedStrings
                         , DataKinds
                         , GADTs
                         , FlexibleContexts
                         , LambdaCase
                         , PolyKinds
                         , RankNTypes
                         , ScopedTypeVariables
                         , TypeApplications
                         , TypeOperators
                         , TypeFamilies
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -O2 -flate-specialise -fspecialise-aggressively

    build-depends:
        base ^>=4.13.0.0,
        relude -any,
        polysemy,
        bytestring,
        xlsx,
        containers,
        lens

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude)

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

executable PerifericoHelper
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:  DerivingStrategies
                         , OverloadedStrings
                         , DataKinds
                         , GADTs
                         , FlexibleContexts
                         , LambdaCase
                         , PolyKinds
                         , RankNTypes
                         , ScopedTypeVariables
                         , TypeApplications
                         , TypeOperators
                         , TypeFamilies
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base ^>=4.13.0.0,
        relude -any,
        polysemy,
        xlsx,
        bytestring,
        lens,
        text,
        PerifericoHelper -any

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude)

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies

test-suite PerifericoHelper-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N
        -O2 -flate-specialise -fspecialise-aggressively

    build-depends:
        base ^>=4.13.0.0,
        relude -any,
        PerifericoHelper -any

    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude)

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies
